# r3d

./: CMakeLists.txt  OUTLINE_IMPLEMENTATION.md  test1.txt  ビルド方法.txt
include/: r3d.h
shaders/raster/: geometry.frag  outline.frag  outline.vert  outline_instanced.vert  skybox.frag
shaders/screen/: ambient.frag  bloom.frag  fog.frag  fxaa.frag  output.frag  scene.frag
src/: r3d_core.c  r3d_environment.c  r3d_model.c  r3d_state.c  r3d_state.h
src/details/: r3d_drawcall.c  r3d_drawcall.h  r3d_outline.c  r3d_outline.h  r3d_shaders.h
